--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     />
     <title>VGEM Counter</title>
   </head>
-  <body style="background-color: #222;">
-    <h1 class="text-white">VGem Counter</h1>
+  <body data-role="page" style="background-color: #222; overflow: hidden;">
+    <h1 class="text-white text-center">VGem Counter</h1>
     <div class="container">
       <div class="input-group flex-nowrap">
         <span class="input-group-text" id="addon-wrapping">Gem</span>
@@ -68,12 +68,12 @@ console.log('If you see random character. Maximize your window.')
       idr.value = convert
 
     }); 
-
-
   </script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"
   ></script>
+  <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </html>
