Adding something special

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <span class="input-group-text" id="addon-wrapping">Gem</span>
         <input type="string" id="gem" class="form-control" placeholder="Insert your value" aria-label="Gem" aria-describedby="addon-wrapping" />
         <span class="input-group-text" id="addon-wrapping">Rp.</span>
-        <input type="string" id="idr" class="form-control" placeholder="" aria-label="Total" aria-describedby="addon-wrapping" disabled />
+        <input type="string" id="idr" class="form-control" placeholder="Price" aria-label="Total" aria-describedby="addon-wrapping" disabled />
       </div>
+      <h5 class="text-center" ><a style="color: #eaeaea; text-decoration: none;" href="https://giyf.netlify.app" target="_blank">Click to see something amazing!</a></h5>
     </div>
   </body>
   <script>
